feat(designer): new drag and drop designer

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="flex gap-2 container h-navbar items-center justify-between">
-    <img routerLink="/" ngSrc="assets/instagras.svg" alt="Logo" width="150" height="70"
+    <img routerLink="/" src="assets/instagras.svg" alt="Logo" width="150" height="70"
         class="cursor-pointer transition hover:brightness-105" />
 
     <div class="flex flex-wrap items-center gap-6">
