--- a/frontend/src/app/components/container/container.component.html
+++ b/frontend/src/app/components/container/container.component.html
@@ -1,4 +1,4 @@
-<div class="container py-8 max-w-screen-md">
+<div class="container py-8 max-w-screen-md w-full">
     <router-outlet />
     <ng-content />
 </div>
