--- a/frontend/src/app/components/layout/layout.component.html
+++ b/frontend/src/app/components/layout/layout.component.html
@@ -1,6 +1,6 @@
-<main class="flex flex-col">
-    <app-header class="border-b border-orange-950/10 fixed w-full z-30"></app-header>
-    <div class="pt-16">
+<main class="flex flex-col min-h-full">
+    <app-header class="border-b border-orange-950/10 fixed w-full z-30 bg-white"></app-header>
+    <div class="pt-16 flex-1 flex justify-center">
         <router-outlet />
     </div>
     <app-footer class="border-t border-orange-950/10 block"></app-footer>
