style(ingredient): improve style

--- a/frontend/src/app/components/ingredient-catalog/ingredient-catalog.component.html
+++ b/frontend/src/app/components/ingredient-catalog/ingredient-catalog.component.html
@@ -27,8 +27,8 @@
 
             <div class="flex flex-col gap-4">
                 <div>
-                    <h3>{{category?.name}}</h3>
-                    <p>{{category?.description}}</p>
+                    <h4>{{category?.name}}</h4>
+                    <p class="text-sm opacity-60">{{category?.description}}</p>
                 </div>
 
                 <ng-container
