--- a/frontend/src/app/components/ingredient-tile/ingredient-tile.component.html
+++ b/frontend/src/app/components/ingredient-tile/ingredient-tile.component.html
@@ -1,12 +1,18 @@
-<div class="rounded-xl p-3 border border-orange-100 bg-orange-50 flex justify-between group items-center gap-2">
-    <div class="flex-1">
-        <p class="text-lg font-medium">{{ingredient.name}}</p>
-        <p class="line-clamp-2 opacity-60 text-sm">{{ingredient.description}}</p>
-        <app-money [value]="ingredient.price"></app-money>
+<div class="rounded-xl border border-orange-100 bg-gradient-to-b from-transparent to-orange-50 group">
+
+    <img src="assets/ingredients/{{ingredient.image}}.png" alt="{{ingredient.name}}" class="w-full">
+
+    <div class="p-3 flex justify-between items-center gap-2">
+        <div class="flex-1">
+            <p class="text-lg font-medium">{{ingredient.name}}</p>
+            <p class="line-clamp-2 opacity-60 text-sm">{{ingredient.description}}</p>
+            <app-money [value]="ingredient.price"></app-money>
+        </div>
+        <div class="flex items-center gap-2" [class.hidden]="!showControls">
+            <button tuiIconButton icon="tuiIconTrash" size="s" appearance="secondary-destructive"
+                class="opacity-0 transition group-hover:opacity-100 " (click)="delete.emit()"></button>
+            <tui-svg src="tuiIconDrag" class="text-slate-300 group-hover:text-slate-600 transition"></tui-svg>
+        </div>
     </div>
-    <div class="flex items-center gap-2" [class.hidden]="!showControls">
-        <button tuiIconButton icon="tuiIconTrash" size="s" appearance="secondary-destructive"
-            class="opacity-0 transition group-hover:opacity-100 " (click)="delete.emit()"></button>
-        <tui-svg src="tuiIconDrag" class="text-slate-300 group-hover:text-slate-600 transition"></tui-svg>
-    </div>
+
 </div>
