--- a/frontend/src/app/components/large-container/large-container.component.html
+++ b/frontend/src/app/components/large-container/large-container.component.html
@@ -1,4 +1,4 @@
-<div class="container py-8 max-w-screen-xl min-w-full">
+<div class="container py-8 max-w-screen-lg min-w-full md:px-8">
     <router-outlet />
     <ng-content />
 </div>
