--- a/frontend/src/app/components/ingredient-tile/ingredient-tile.component.html
+++ b/frontend/src/app/components/ingredient-tile/ingredient-tile.component.html
@@ -1,6 +1,6 @@
 <div class="rounded-xl border border-orange-100 bg-gradient-to-b from-transparent to-orange-50 group">
 
-    <img src="assets/ingredients/{{ingredient.image}}.png" alt="{{ingredient.name}}" class="w-full">
+    <img src="assets/ingredients/{{ingredient.id}}.png" alt="{{ingredient.name}}" class="w-full">
 
     <div class="p-3 flex justify-between items-center gap-2">
         <div class="flex-1">
