feat: improve style

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="flex gap-2 container h-navbar items-center justify-between">
+<nav class="flex gap-2 container py-8 max-w-screen-xl md:px-8 h-navbar items-center justify-between">
     <img routerLink="/" src="assets/instagras.svg" alt="Logo" width="150" height="70"
         class="cursor-pointer transition hover:brightness-105" />
 
