--- a/frontend/src/app/components/ingredient-tile/ingredient-tile.component.html
+++ b/frontend/src/app/components/ingredient-tile/ingredient-tile.component.html
@@ -11,7 +11,7 @@
         <div class="flex items-center gap-2" [class.hidden]="!showControls">
             <button tuiIconButton icon="tuiIconTrash" size="s" appearance="secondary-destructive"
                 class="opacity-0 transition group-hover:opacity-100 " (click)="delete.emit()"></button>
-            <tui-svg src="tuiIconDrag" class="text-slate-300 group-hover:text-slate-600 transition"></tui-svg>
+            <tui-svg src="tuiIconDrag" class="text-stone-300 group-hover:text-stone-600 transition"></tui-svg>
         </div>
     </div>
 
