--- a/frontend/src/app/components/sidebar-layout/sidebar-layout.component.html
+++ b/frontend/src/app/components/sidebar-layout/sidebar-layout.component.html
@@ -1,6 +1,6 @@
 <div class="grid grid-cols-sidebar gap-2 w-full">
 
-    <div class="bg-white border-r border-slate-200 static">
+    <div class="bg-white border-r border-stone-200 static">
         <router-outlet name="sidebar"></router-outlet>
     </div>
 
