--- a/frontend/src/app/pages/catalog/catalog.component.html
+++ b/frontend/src/app/pages/catalog/catalog.component.html
@@ -1,5 +1,5 @@
 <app-title>
-    Catalogue
+    Vos burgers préférés
     <div ngProjectAs="content" class="py-2 flex flex-col gap-4">
 
         <p>Découvrez le plus grand catalogue de burgers du monde, créés par la communauté.</p>
