--- a/frontend/src/app/components/designer-droplist/designer-droplist.component.html
+++ b/frontend/src/app/components/designer-droplist/designer-droplist.component.html
@@ -10,7 +10,7 @@
     </div>
 
 
-    <div class="bg-slate-500 h-16 w-full rounded-xl" *cdkDragPlaceholder></div>
+    <div class="bg-stone-500 h-16 w-full rounded-xl" *cdkDragPlaceholder></div>
 
 
     @for (ingredient of designerService.list; track ingredient) {
