--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="flex gap-2 justify-between py-4 container text-slate-500">
+<div class="flex gap-2 justify-between py-4 container text-stone-500">
     <p>© {{appName}}</p>
     <p><a href="https://franck-g.fr/" target="_blank" tuiLink>par FranckG.</a></p>
 </div>
