--- a/frontend/src/app/components/ingredient-catalog/ingredient-catalog.component.html
+++ b/frontend/src/app/components/ingredient-catalog/ingredient-catalog.component.html
@@ -50,6 +50,6 @@
         [cdkDropListConnectedTo]="['designer-list']" [cdkDropListSortingDisabled]="true">
         <app-ingredient-tile *ngFor="let ingredient of ingredients" [ingredient]="ingredient" cdkDrag
             class="cursor-move"></app-ingredient-tile>
-        <div class="bg-slate-500 h-16 w-full rounded-xl" *cdkDragPlaceholder></div>
+        <div class="bg-stone-500 h-16 w-full rounded-xl" *cdkDragPlaceholder></div>
     </div>
 </ng-template>
