--- a/frontend/src/app/components/product-card/product-card.component.html
+++ b/frontend/src/app/components/product-card/product-card.component.html
@@ -6,7 +6,7 @@
 
         <h4>{{product.name}}</h4>
 
-        <p class="text-slate-600 line-clamp-2">{{product.description}}</p>
+        <p class="text-stone-600 line-clamp-2">{{product.description}}</p>
 
         <app-money [value]="product.price"></app-money>
 
