--- a/frontend/src/app/components/title/title.component.html
+++ b/frontend/src/app/components/title/title.component.html
@@ -1,4 +1,4 @@
-<section class="my-12">
+<section class="my-12 animate-in fade-in">
     <h1 class="mb-4">
         <ng-content></ng-content>
     </h1>
