--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,10 +10,9 @@
   font-weight: 400;
 }
 
-body {
+* {
   font-feature-settings: "calt", "liga", "rlig", "rvrn",
-    "kern", "rclt", "ss01" !important;
-  color: theme(colors.orange.50);
+    "kern", "rclt", "ss01", "salt" !important;
 }
 
 :root {
@@ -94,6 +93,10 @@ body {
   --tui-shadow-sheet: theme(boxShadow.lg);
 }
 
+[tuiWrapper][data-appearance="textfield"] {
+  @apply bg-white shadow-none;
+}
+
 tui-notification .t-content {
   font: var(--tui-font-text-m-2);
 }
@@ -102,8 +105,8 @@ tui-notification .t-icon {
   font: var(--tui-font-text-l-2);
 }
 
-[tuiButton] {
-  font-family: var(--tui-heading-font) !important;
+[tuiButton] .t-content {
+  @apply tracking-tight font-medium;
 }
 
 .cdk-drag-animating {
