--- a/frontend/src/app/components/ingredient-tile/ingredient-tile.component.html
+++ b/frontend/src/app/components/ingredient-tile/ingredient-tile.component.html
@@ -4,9 +4,9 @@
 
     <div class="p-3 flex justify-between items-center gap-2">
         <div class="flex-1">
-            <p class="text-lg font-medium">{{ingredient.name}}</p>
+            <p class="font-medium">{{ingredient.name}}</p>
             <p class="line-clamp-2 opacity-60 text-sm">{{ingredient.description}}</p>
-            <app-money [value]="ingredient.price"></app-money>
+            <p class="text-sm"><app-money [value]="ingredient.price"></app-money></p>
         </div>
         <div class="flex items-center gap-2" [class.hidden]="!showControls">
             <button tuiIconButton icon="tuiIconTrash" size="s" appearance="secondary-destructive"
