style: design overhaul

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="flex gap-2 container py-8 max-w-screen-xl md:px-8 h-navbar items-center justify-between">
-    <img routerLink="/" src="assets/instagras.svg" alt="Logo" width="150" height="70"
-        class="cursor-pointer transition hover:brightness-105" />
+    <img routerLink="/" src="assets/instagras.svg" alt="Logo" width="120" height="60"
+        class="cursor-pointer transition hover:brightness-105" tuiHint="Retour à l'accueil" />
 
     <div class="flex flex-wrap items-center gap-6">
         <ng-container *ngFor="let entry of menuEntries">
