--- a/frontend/src/app/components/product-card/product-card.component.html
+++ b/frontend/src/app/components/product-card/product-card.component.html
@@ -1,16 +1,22 @@
 <tui-island [routerLink]="['/product', product.id]" [hoverable]="true">
     <div class="flex flex-col gap-2">
 
+        <div class="flex justify-between items-center">
+            <h5 class="line-clamp-2">{{product.name}}</h5>
+            <app-rating [rating]="product.rating" [preview]="true" class="text-orange-900 text-sm"></app-rating>
+        </div>
+
         <app-product-preview [product]="product"
             class="aspect-square flex items-center justify-center"></app-product-preview>
 
-        <h4>{{product.name}}</h4>
 
-        <p class="text-stone-600 line-clamp-2">{{product.description}}</p>
+        <p class="text-stone-600 line-clamp-2 leading-snug">{{product.description}}</p>
 
-        <tui-rating [ngModel]="product.rating" [readOnly]="true"></tui-rating>
-
-        <app-money [value]="product.price"></app-money>
+        <div class="flex items-center justify-between">
+            <p class="font-semibold text-lg"><app-money [value]="product.price"></app-money></p>
+            <button tuiIconButton icon="tuiIconShoppingCart" size="s" appearance="secondary"
+                tuiHint="Ajouter au panier"></button>
+        </div>
 
     </div>
 </tui-island>
