--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -123,11 +123,11 @@ tui-notification .t-icon {
 
 @layer base {
   h1 {
-    @apply text-4xl md:text-5xl lg:text-6xl font-medium tracking-tight;
+    @apply text-4xl md:text-5xl lg:text-6xl font-semibold tracking-tight;
   }
 
   h2 {
-    @apply text-2xl lg:text-4xl font-medium;
+    @apply text-3xl md:text-4xl lg:text-5xl font-bold tracking-tight;
   }
 
   h3 {
