--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -1,5 +1,5 @@
-<app-title class="text-center">
-    <h1>Nous cuisinons vos burgers</h1>
+<app-title class="text-center duration-1000 ease-out">
+    <h1 class="animate-in fade-in slide-in-from-bottom-8">Nous cuisinons vos burgers</h1>
     <section ngProjectAs="content" class="flex flex-col gap-6">
         <p class="text-balance max-w-prose text-lg mx-auto">
             Découvrez les burgers conçus par la communauté, faites vous livrer chez vous et partagez vos créations.
