feat: new layout

--- a/frontend/src/app/components/layout/layout.component.html
+++ b/frontend/src/app/components/layout/layout.component.html
@@ -1,6 +1,6 @@
 <main class="flex flex-col min-h-full">
     <app-header
-        class="border-b border-orange-950/10 fixed w-full z-30 bg-white shadow-xl shadow-stone-300/10"></app-header>
+        class="border-b border-orange-950/10 fixed w-full z-30 bg-white shadow-xl shadow-stone-300/10 animate-in fade-in slide-out-to-top-4"></app-header>
     <div class="pt-16 flex-1 flex justify-center">
         <router-outlet />
     </div>
