--- a/frontend/src/app/components/product-card/product-card.component.html
+++ b/frontend/src/app/components/product-card/product-card.component.html
@@ -1,27 +1,30 @@
-<tui-island [routerLink]="['/product', product.id]" [hoverable]="true">
-    <div class="flex flex-col gap-2">
+<a class="flex gap-6 px-8 py-4 transition hover:bg-stone-200/20 w-full items-center"
+    [routerLink]="['/product', product.id]">
+
+    <app-product-preview [product]="product"
+        class="aspect-square flex items-center justify-center max-w-28 cursor-pointer"></app-product-preview>
+
+    <div class="flex flex-col gap-2 flex-1">
 
         <div class="flex justify-between items-center">
-            <div>
-                <h5 class="line-clamp-2">{{product.name}}</h5>
-                <p class="text-stone-600 hover:text-stonz-500 line-clamp-2 text-sm"><app-product-author
-                        [author]="product.author"></app-product-author></p>
-            </div>
-
-            <app-rating [rating]="product.rating" [preview]="true" class="text-orange-900 text-sm"></app-rating>
+            <span class="flex gap-1 items-baseline">
+                <h5>{{product.name}}</h5>
+                <p class="opacity-60 hover:opacity-100 hover:underline">
+                    <app-product-author [author]="product.author"></app-product-author>
+                </p>
+            </span>
         </div>
-
-        <app-product-preview [product]="product"
-            class="aspect-square flex items-center justify-center"></app-product-preview>
-
 
         <p class="text-stone-600 line-clamp-2 leading-snug">{{product.description}}</p>
 
-        <div class="flex items-center justify-between">
-            <p class="font-semibold text-lg"><app-money [value]="product.price"></app-money></p>
-            <button tuiIconButton icon="tuiIconShoppingCart" size="s" appearance="secondary"
-                tuiHint="Ajouter au panier"></button>
-        </div>
+        <app-product-stats [product]="product" class="text-stone-800">
 
+            <button tuiButton size="s" appearance="secondary">
+                Ajouter •
+                <p class="font-semibold ml-1 text-sm"><app-money [value]=" product.price"></app-money></p>
+            </button>
+
+        </app-product-stats>
     </div>
-</tui-island>
+
+</a>
