--- a/frontend/src/app/components/product-card/product-card.component.html
+++ b/frontend/src/app/components/product-card/product-card.component.html
@@ -4,20 +4,20 @@
     <app-product-preview [product]="product"
         class="aspect-square flex items-center justify-center max-w-28 cursor-pointer"></app-product-preview>
 
-    <div class="flex flex-col gap-2 flex-1">
+    <div class="flex flex-col flex-1">
 
-        <div class="flex justify-between items-center">
-            <span class="flex gap-1 items-baseline">
-                <h5>{{product.name}}</h5>
-                <p class="opacity-60 hover:opacity-100 hover:underline">
-                    <app-product-author [author]="product.author"></app-product-author>
-                </p>
+        <p>
+            <span class="text-lg font-medium tracking-tight">{{product.name}}</span>
+            <span class="opacity-60 text-sm ml-2">
+                <app-product-author [author]="product.author"
+                    class=" hover:opacity-100 hover:underline"></app-product-author>
+                • {{product.createdOn | timeAgo}}
             </span>
-        </div>
+        <p>
 
         <p class="text-stone-600 line-clamp-2 leading-snug">{{product.description}}</p>
 
-        <app-product-stats [product]="product" class="text-stone-800">
+        <app-product-stats [product]="product" class="text-stone-800 mt-3">
 
             <button tuiButton size="s" appearance="secondary">
                 Ajouter •
