--- a/frontend/src/app/pages/product/product.component.html
+++ b/frontend/src/app/pages/product/product.component.html
@@ -1,15 +1,3 @@
 <div class="flex gap-6" *ngIf="product$ | async as product">
-
-    <app-product-preview [product]="product"
-        class="aspect-square flex items-center justify-center"></app-product-preview>
-
-    <app-title>
-        {{product?.name}}
-        <div ngProjectAs="content" class="flex flex-col gap-2">
-            <p>{{product?.description}}</p>
-            <p class="font-medium text-lg"><app-money [value]="product?.price ?? 0"></app-money></p>
-            <app-rating [rating]="product.rating"></app-rating>
-        </div>
-    </app-title>
-
+    <app-product-card [product]="product" class="flex-1"></app-product-card>
 </div>
