--- a/frontend/src/app/components/title/title.component.html
+++ b/frontend/src/app/components/title/title.component.html
@@ -1,5 +1,5 @@
-<section class="my-12 animate-in fade-in">
-    <h2 class="mb-4">
+<section class="my-12 flex flex-col gap-2">
+    <h2>
         <ng-content></ng-content>
     </h2>
 
