--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -1,8 +1,11 @@
-<app-title class="text-center duration-1000 ease-out">
-    <h1 class="animate-in fade-in slide-in-from-bottom-8">Nous cuisinons vos burgers</h1>
-    <section ngProjectAs="content" class="flex flex-col gap-6">
+<div class="text-center py-32 flex flex-col gap-6">
+    <h1 class="max-w-prose mx-auto">
+        Partagez vos recettes avec le monde entier
+    </h1>
+
+    <section class="flex flex-col gap-6">
         <p class="text-balance max-w-prose text-lg mx-auto">
-            Découvrez les burgers conçus par la communauté, faites vous livrer chez vous et partagez vos créations.
+            Faites vous livrez les recettes concotées par la communauté et partagez les vôtres.
         </p>
         <div class="flex gap-4 flex-wrap justify-center">
 
@@ -20,4 +23,4 @@
 
         </div>
     </section>
-</app-title>
+</div>
