feat: add appbar

--- a/frontend/src/app/components/horizontal-layout/horizontal-layout.component.html
+++ b/frontend/src/app/components/horizontal-layout/horizontal-layout.component.html
@@ -5,6 +5,7 @@
     </div>
 
     <div class="flex-1 max-w-screen-md min-h-screen">
+        <router-outlet name="appbar"></router-outlet>
         <router-outlet></router-outlet>
     </div>
 
