--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -10,7 +10,7 @@
         <div class="flex gap-4 flex-wrap justify-center">
 
             <tui-badged-content [contentTop]="badge" size="l" [rounded]="true">
-                <button tuiButton routerLink="/catalog">Recettes populaires</button>
+                <button tuiButton routerLink="/app">Recettes populaires</button>
             </tui-badged-content>
 
             <ng-template #badge>
