--- a/frontend/src/app/components/product-card/product-card.component.html
+++ b/frontend/src/app/components/product-card/product-card.component.html
@@ -1,5 +1,4 @@
-<a class="flex gap-6 px-8 py-4 transition hover:bg-stone-200/20 w-full items-center"
-    [routerLink]="['/product', product.id]">
+<a class="flex gap-6 px-8 py-4 transition hover:bg-stone-200/20 w-full items-center" [routerLink]="[product.id]">
 
     <app-product-preview [product]="product"
         class="aspect-square flex items-center justify-center max-w-28 cursor-pointer"></app-product-preview>
