--- a/frontend/src/app/components/product-card/product-card.component.html
+++ b/frontend/src/app/components/product-card/product-card.component.html
@@ -1,29 +1,10 @@
-<a class="flex gap-6 px-8 py-4 transition hover:bg-stone-200/20 w-full items-center" [routerLink]="[product.id]">
+<a class="flex gap-6 px-8 py-4 w-full items-center">
 
     <app-product-preview [product]="product"
         class="aspect-square flex items-center justify-center max-w-28 cursor-pointer"></app-product-preview>
 
-    <div class="flex flex-col flex-1">
-
-        <p>
-            <span class="text-lg font-medium tracking-tight">{{product.name}}</span>
-            <span class="opacity-60 text-sm ml-2">
-                <app-product-author [author]="product.author"
-                    class=" hover:opacity-100 hover:underline"></app-product-author>
-                • {{product.createdOn | timeAgo}}
-            </span>
-        <p>
-
-        <p class="text-stone-600 line-clamp-2 leading-snug">{{product.description}}</p>
-
-        <app-product-stats [product]="product" class="text-stone-800 mt-3">
-
-            <button tuiButton size="s" appearance="secondary">
-                Ajouter •
-                <p class="font-semibold ml-1 text-sm"><app-money [value]=" product.price"></app-money></p>
-            </button>
-
-        </app-product-stats>
-    </div>
+    <app-product-info [product]="product" class="flex-1">
+        <ng-content select="actions" ngProjectAs="actions"></ng-content>
+    </app-product-info>
 
 </a>
