--- a/frontend/src/app/pages/catalog/catalog.component.html
+++ b/frontend/src/app/pages/catalog/catalog.component.html
@@ -26,8 +26,15 @@
     } @else {
     <div class="flex flex-col divide-y divide-stone-200">
         @for (product of products; track product.id) {
-        <app-product-card [product]="product"
-            class="animate-in fade-in slide-in-from-top-2 transition-all"></app-product-card>
+        <app-product-card [routerLink]="[product.id]" [product]="product"
+            class="animate-in fade-in slide-in-from-top-2 transition-all cursor-pointer hover:bg-stone-200/20">
+
+            <button tuiButton size="s" appearance="secondary" ngProjectAs="actions">
+                Ajouter •
+                <p class="font-semibold ml-1 text-sm"><app-money [value]=" product.price"></app-money></p>
+            </button>
+
+        </app-product-card>
         }
     </div>
     }
