--- a/frontend/src/app/pages/product/product.component.html
+++ b/frontend/src/app/pages/product/product.component.html
@@ -1,3 +1,16 @@
-<div class="flex gap-6" *ngIf="product$ | async as product">
-    <app-product-card [product]="product" class="flex-1"></app-product-card>
+<div class="flex flex-col gap-6 p-8" *ngIf="product$ | async as product">
+
+    <div class="rounded-xl bg-white">
+        <app-product-preview [product]="product"
+            class="aspect-square flex items-center justify-center max-w-42 mx-auto"></app-product-preview>
+    </div>
+    <app-product-info [product]="product" class="flex-1"></app-product-info>
+
+    <button tuiButton size="l">
+        Ajouter au panier •
+        <app-money class="ml-2 font-semibold" [value]="product.price"></app-money>
+    </button>
+
+    <p class="text-lg font-medium">Commentaires</p>
+
 </div>
