--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -132,7 +132,7 @@ tui-notification .t-icon {
   }
 
   h3 {
-    @apply text-xl lg:text-3xl font-medium tracking-tight;
+    @apply text-xl lg:text-3xl font-bold tracking-tight;
   }
 
   h4 {
