--- a/frontend/src/app/components/aside/aside.component.html
+++ b/frontend/src/app/components/aside/aside.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col p-8 gap-4 sticky top-0">
 
-    <div class="h-12 w-full rounded-full bg-stone-100"></div>
+    <app-search-products></app-search-products>
 
     <div class="h-64 w-full rounded-xl bg-stone-100 p-3">
         Filtres
