--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -5,7 +5,7 @@
 
     <section class="flex flex-col gap-6">
         <p class="text-balance max-w-prose text-lg mx-auto">
-            Faites vous livrez les recettes concotées par la communauté et partagez les vôtres.
+            Faites vous livrez les recettes concoctées par la communauté et partagez les vôtres.
         </p>
         <div class="flex gap-4 flex-wrap justify-center">
 
