feat: implement new filters

--- a/frontend/src/app/components/aside/aside.component.html
+++ b/frontend/src/app/components/aside/aside.component.html
@@ -2,12 +2,18 @@
 
     <app-search-products></app-search-products>
 
-    <div class="h-64 w-full rounded-xl bg-stone-100 p-3">
-        Filtres
+    <div class="w-full rounded-xl bg-stone-100 p-3 flex flex-col gap-2">
+        <div class="flex justify-between items-center">
+            <p class="font-medium">Filtrer</p>
+            <tui-tooltip
+                content="Envie d'ingrédients en particulier ? Utiliser les filtres pour ne voir que les recettes contenant les ingrédients de votre choix"></tui-tooltip>
+        </div>
+        <app-ingredient-filters></app-ingredient-filters>
     </div>
 
     <div class="h-64 w-full rounded-xl bg-stone-100 p-3">
-        Panier
+        <p class="font-medium">Panier</p>
+        <p class="text-sm">Bientôt disponible</p>
     </div>
 
 </div>
